--- a/exercicios/para-casa/games/package.json
+++ b/exercicios/para-casa/games/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "para-casa",
+  "name": "games",
   "version": "1.0.0",
-  "description": "## Games",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -10,11 +10,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
   "dependencies": {
     "dotenv": "^16.1.4",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
