--- a/exercicios/para-casa/package.json
+++ b/exercicios/para-casa/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "week-11-api",
+  "name": "games-n-series-api",
   "version": "1.0.0",
-  "description": "home exercise, API development",
-  "main": "./API/app/app.js",
+  "description": "Home exercise, API development",
+  "main": "API/server/server.js",
   "scripts": {
-    "test": "nodemon server.js"
+    "test": "nodemon server.js",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nearlyerika/on22-b3-s11-api-revisao.git"
   },
   "keywords": [
-    "Javascript",
-    "Node",
+    "javascript",
+    "node",
     "express",
     "API",
     "RESTful",
@@ -25,7 +26,8 @@
   },
   "homepage": "https://github.com/nearlyerika/on22-b3-s11-api-revisao#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
