--- a/exercicios/para-casa/series/package.json
+++ b/exercicios/para-casa/series/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "para-sala",
+  "name": "series",
   "version": "1.0.0",
-  "description": "- Explicação do exercício: \r ---",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
